--- a/src/components/portofolioList/portofolioList.scss
+++ b/src/components/portofolioList/portofolioList.scss
@@ -5,7 +5,7 @@
   font-size: 14px;
   margin-right: 50px;
   padding: 7px;
-  border-radius: 10px;
+  border-radius: 20px;
   cursor: pointer;
 
   @include mobile{
